# MyvoteEOS-proxy

./: .babelrc  .env.example  .gitignore  README.md  docker-compose.yml  makefile  package.json
.github/: pull_request_template.md
.github/workflows/: codeql-analysis.yml  push-dev-environment.yaml  push-prod-environment.yaml
contract/: .clang-format  CMakeLists.txt  makefile  myvoteeosdao.wasm  novotebuyeos.wasm  souleosproxy.abi  souleosproxy.wasm
contract/include/: myvoteeosdao.hpp  novotebuyeos.hpp  souleosproxy.hpp
contract/ricardian/: novotebuyeos.clauses.md  novotebuyeos.contracts.md  solueosproxy.contracts.md  souleosproxy.clauses.md
contract/src/: CMakeLists.txt  myvoteeosdao.cpp  novotebuyeos.cpp  souleosproxy.cpp
hapi/: .gitignore  Dockerfile  package.json
hapi/src/: mod.cjs
hapi/src/config/: index.js  twitter.config.js
hapi/src/routes/: countMentions.route.js  index.js  test.route.js
hapi/src/services/: exchange-state.service.js  index.js  (+3 more)
hasura/: Dockerfile
hasura/metadata/: actions.graphql  actions.yaml
kubernetes/: configmap.yaml  postgres-statefulset.yaml  storageclass.yaml
public/: index.html
src/: App.js  App.test.js  graphql.js  index.js
src/config/: index.js  main.config.js  sdk.config.js  ual.config.js
src/gql/: index.js
src/language/: en.json  es.json  index.js  ko.json  zh.json
src/routes/: index.js
src/theme/: index.js  palette.js  typography.js
src/utils/: index.js  novotebuyeos.js
utils/: meta.mk
webapp/: .babelrc  Dockerfile  makefile  package.json
webapp/public/: index.html
webapp/src/: index.js
(+166 files in other folders)
